Update and rename LondonDashboard.html to index.html

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
    <!-- eCharts.js -->
    <script src="https://cdn.jsdelivr.net/npm/echarts@5.4.0/dist/echarts.min.js"></script>
-    <link rel="stylesheet" href="style.css"/>
+   <link rel="stylesheet" href="style.css"/>
 
 </head>
 <body>
@@ -58,7 +58,8 @@
    // Add other bootstrap parameters as needed, using camel case.
  });
 </script>
-
+<script src="https://unpkg.com/@deck.gl/core@latest/dist.min.js"></script>
+<script src="https://unpkg.com/@deck.gl/google-maps@latest/dist.min.js"></script>
 <script src="index.js"></script> 
 
  <!-- UIKit JS -->
