--- a/index.html
+++ b/index.html
@@ -58,8 +58,7 @@
    // Add other bootstrap parameters as needed, using camel case.
  });
 </script>
-<script src="https://unpkg.com/@deck.gl/core@latest/dist.min.js"></script>
-<script src="https://unpkg.com/@deck.gl/google-maps@latest/dist.min.js"></script>
+<script src="https://unpkg.com/deck.gl@latest/dist.min.js"></script>
 <script src="index.js"></script> 
 
  <!-- UIKit JS -->
